--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica, Arial, sans-serif;
     background-color: var(--dark-bg);
     color: var(--light-text);
     line-height: 1.6;
